--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "react-dom": "^16.13.1"
   },
   "devDependencies": {
+    "@types/fs-extra": "^9.0.1",
     "@types/node": "^14.0.27",
     "@types/react": "^16.9.44",
+    "fs-extra": "^9.0.1",
+    "gray-matter": "^4.0.2",
     "prettier": "^2.0.5",
     "typescript": "^3.9.7"
   }
