--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
     "fs-extra": "^9.0.1",
     "gray-matter": "^4.0.2",
     "prettier": "^2.0.5",
-    "typescript": "^3.9.7"
+    "remark-highlight.js": "^6.0.0",
+    "remark-html": "^12.0.0",
+    "remark-parse": "^8.0.3",
+    "typescript": "^3.9.7",
+    "unified": "^9.1.0"
   }
 }
