--- a/package.json
+++ b/package.json
@@ -12,21 +12,23 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "next": "^10.2.3",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "next": "^11.1.4",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "@types/fs-extra": "^9.0.1",
     "@types/node": "^14.0.27",
     "@types/react": "^16.9.44",
+    "eslint": "^8.12.0",
+    "eslint-config-next": "12.1.1",
     "fs-extra": "^9.0.1",
     "gray-matter": "^4.0.2",
     "prettier": "^2.0.5",
     "remark-highlight.js": "^6.0.0",
     "remark-html": "^12.0.0",
     "remark-parse": "^8.0.3",
-    "typescript": "^3.9.7",
+    "typescript": "^4.6.3",
     "unified": "^9.1.0"
   }
 }
